@@ -1,3 +1,9 @@
+2012-02-06	The InnoDB Team
+
+	* handler/ha_innodb.cc:
+	Fix Bug #11754376 45976: INNODB LOST FILES FOR TEMPORARY TABLES ON
+	GRACEFUL SHUTDOWN
+
 2012-01-30	The InnoDB Team
 
 	* fil/fil0fil.c:
